# parallel_worker

./: Cargo.toml  README.md  tarpaulin-report.html
examples/: basic.rs  cancel.rs  sort.rs
src/: basic_worker.rs  cell_utils.rs  lib.rs  main.rs  task_queue.rs  worker.rs  worker_methods.rs  worker_state.rs  worker_traits.rs
src/internal/: heap_buffer.rs  mod.rs  ordered_result.rs  result_buffer.rs  task_queue.rs  work.rs  worker_state.rs
src/worker_traits/: init.rs  methods.rs  mod.rs
src/workers/: basic_worker.rs  cancelable_worker.rs  mod.rs  ordered_cancelable_worker.rs  ordered_worker.rs
tests/: integration.rs
